--- a/src/components/ui/OverlappingBox/OverlappingBox.module.scss
+++ b/src/components/ui/OverlappingBox/OverlappingBox.module.scss
@@ -1,4 +1,5 @@
 @use '@/styles/abstracts/variables' as var;
+@use '@/styles/abstracts/mixins' as mixins;
 
 .container {
   display: flex;
@@ -7,8 +8,9 @@
   justify-content: center;
   padding-block: var.$spacing-xl;
   color: var(--foreground);
-  background-color: var(--main-color);
   border-radius: 0 var.$border-radius-lg var.$border-radius-lg 0;
+
+  @include mixins.glow-card(var(--main-color));
 }
 
 .container:nth-child(odd) {
@@ -33,8 +35,9 @@
   padding-block: var.$spacing-lg 0;
   padding-inline: var.$spacing-lg;
   margin-top: -20px;
-  background-color: var(--sub-color);
   border-radius: var.$border-radius-lg 0 0 var.$border-radius-lg;
+
+  @include mixins.glow-card(var(--sub-color));
   @media (max-width: var.$breakpoint-md) {
     grid-column: 2 / 11;
     padding-inline: var.$spacing-sm;
@@ -47,6 +50,11 @@
   align-items: center;
   justify-content: center;
   width: 80%;
+  padding-block: var.$spacing-sm;
+
+  img {
+    margin-block: var.$spacing-md;
+  }
 }
 .title {
   padding-block-end: 6px;
